Añadir archivo index.html con contenido de ejemplo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Web</title>
+    <title>Pueba</title>
     <style>
         /* Estilos CSS aquí */
         body {
@@ -49,7 +49,7 @@
     <div class="container">
         <section>
             <h2>Sección 1</h2>
-            <p>Este es un ejemplo de una página web básica.</p>
+            <p>Esta es una prueba</p>
         </section>
 
         <section>
