--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <header>
-        <h1>Mi Página Web</h1>
+        <h1>Prueba 2</h1>
     </header>
 
     <div class="container">
