--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pueba2</title>
+    <title>Pueba commit</title>
     <style>
         /* Estilos CSS aquí */
         body {
